--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,13 +2,17 @@
 <resources>
 
     <string name="app_name">IHelp</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
+     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
     <string name="my_card_list">My Card List</string>
 
+    
+    
+    <!-- MENU -->
+    <string name="title_my_profile">My Profile</string>
+    <string name="title_section2">Secqq</string>
+    <string name="title_section3">Section 3</string>
+   
 </resources>
