user	final stuff

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,7 +12,7 @@
     
     <!-- MENU -->
     <string name="title_my_profile">My Profile</string>
-    <string name="title_section2">Secqq</string>
+    <string name="title_section2">Items</string>
     <string name="title_section3">Section 3</string>
    
 </resources>
